# DIGIT_ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: config_single.yaml
launch/: DIGIT.launch  DIGIT_2_sensors.launch  data_collection.launch
models/: __init__.py  resnet.py  resnet18rnn.py
msg/: contact_center
src/: DIGIT.py  Digit.py  MessagePopup.py  inference_server.py  multiple_sensors.py  single_sensor.py
src/models/: __init__.py
src/utils/: contact_area_functions.py  data_acquisition_functions.py  geometric_functions.py  grasp_stability.py  rotation_functions.py  sensor_functions.py
srv/: inference_request.srv
